# rail_shire

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: smoke-test.yml  testing-and-coverage.yml
examples/: Evaluation_demo_LSSTsim.ipynb  Evaluation_demo_LSSTsim_v2.ipynb  PZ_analysis.ipynb  SHIRE_demo.ipynb  SHIRE_demo_LSSTsim.ipynb  SHIRE_demo_LSSTsim_mini.ipynb  SHIRE_demo_LSSTsim_splitDataset-bright.ipynb  SHIRE_demo_LSSTsim_splitDataset-faint.ipynb  SHIRE_demo_LSSTxROMANsim.ipynb  SHIRE_run_COSMOS2020-SuccessiveRandomTempl.ipynb  SHIRE_run_DESC-DP1-Euclid.ipynb  SHIRE_run_DESC-DP1.ipynb  SHIRE_run_LSSTsim-SuccessiveRandomTempl.ipynb  TrainingSample_COSMOS2020.ipynb  compare_priors.ipynb  conf_shire_COSMOS2020.json  defaults.json  get_CosmoDC2_gold_phot.ipynb  get_RomanRubin_gold_phot.ipynb  templ_clrs_selection.ipynb
examples/data/: COSMOS2020_emu_hscOnly_CC_zinf3_noNaN.h5  minitest_magszgalaxies_lsstroman_gold_hp10552_3k.h5  minitrain_magszgalaxies_lsstroman_gold_hp10552_1k.h5  train_magszgalaxies_lsstroman_gold_hp10552_10k.h5
examples/data/FILTER/filt_cosmos/: cosmos_NB711.par  cosmos_NB816.par  cosmos_u_cfht.par  vista_NB118.par
examples/data/FILTER/filt_euclid/: h_euclid.par  j_euclid.par  y_euclid.par
examples/data/SED/: dsps_valid_fits_F2SM3_GG_DESI.h5  dsps_valid_fits_F2_GG_DESI_SM3.h5  dsps_valid_fits_GG_DESI.h5  dsps_valid_fits_GG_DESI_SM3.h5
src/rail/estimation/: __init__.py  __main__.py  analysis.py  dsps_params.py
src/rail/estimation/algos/: __main__.py  analysis.py  cosmology.py  dsps_params.py  estimate.py  filter.py  galaxy.py  inform.py  io_utils.py  met_weights_age_dep.py  template.py
src/rail/shire/: __init__.py
tests/rail_shire/: test_example_module.py
