[project]
name = "pz-rail-shire"
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    { name = "LSST Dark Energy Science Collaboration (DESC)", email = "lsst-desc-rail-admin@slac.stanford.edu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]

dependencies = [
    "numpy",
    "astropy",
    "h5py",
    "tqdm",
    "diffstar<=0.3.2",
    "diffmah<=0.6.1",
    "dsps",
    "jax",
    "jaxlib",
    "interpax",
    "jax_cosmo",
    "pandas",
    "pz-rail-dsps",
    "astro-sedpy",
    "matplotlib",
    "seaborn"
]

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov", # Used to report total code coverage
    "pre-commit", # Used to run checks before finalizing a git commit
    "pylint", # Used for static linting of files
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/rail/shire/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--cov=rail",
    "--cov-report=html"
]

[tool.pylint]
disable = [
    "abstract-method",
    "invalid-name",
    "too-many-statements",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "use-dict-literal",
    "broad-exception-caught",
    "too-many-positional-arguments",
    "too-many-arguments",
    "wrong-import-order",
    "unused-variable",
    "pointless-string-statement",
    "ungrouped-imports",
    "import-outside-toplevel",
    "unreachable",
    "unspecified-encoding",
    "no-member",
    "not-callable",
    "trailing-whitespace",
    "too-many-instance-attributes",
    "relative-beyond-top-level"
]
max-line-length = 200
max-locals = 100
max-branches = 25
max-public-methods = 50
